--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,13 @@
             <version>1.7.30</version>
         </dependency>
 
+        <!--这个jar包应该依赖log4j,不引入log4j会有控制台会有warn，但不影响正常使用-->
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <version>5.1.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
